Primeros Endpoints activos entre el Frontend y el Backend.